# fractal-explorer

./: .gitignore  CMakeLists.txt  DEBUG_NOTES.md  DEPLOYMENT.md  MULTI_THREADING.md  Makefile  PERFORMANCE_DISPLAY.md  QUICKSTART.html  QUICKSTART.md  README.md  ZOOM_BOX_FEATURE.md  ZOOM_BOX_FIXES.md  fractal.js  fractal.wasm  index.html
QUICKSTART_files/libs/bootstrap/: bootstrap-10f2a707be28fafd42299a854f6061fc.min.css
css/: gallery.css
js/: canvas-manager.js  interaction-handler.js  minimap.js  preset-gallery.js
scripts/: build.sh  dev-server.py
src/cpp/: main.cpp
src/cpp/bindings/: emscripten_bindings.cpp
src/cpp/core/: color_palette.cpp  color_palette.h  fractal_engine.cpp  fractal_engine.h  julia.cpp  julia.h  mandelbrot.cpp  mandelbrot.h
src/cpp/rendering/: progressive_renderer.cpp  progressive_renderer.h  tile_manager.cpp  tile_manager.h  viewport.cpp  viewport.h
src/css/: controls.css  main.css  minimap.css
src/html/: index.html
src/js/: animation.js  main.js  renderer-manager.js  state-manager.js  wasm-loader.js
src/workers/: fractal-worker.js
